--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -49,6 +49,6 @@
         android:layout_width="166dp"
         android:layout_height="269dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/icon" />
+        app:layout_constraintEnd_toEndOf="parent"/>
+<!--        app:srcCompat="@drawable/icon" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
