--- a/app/src/main/res/layout/activity_login_dosen.xml
+++ b/app/src/main/res/layout/activity_login_dosen.xml
@@ -18,28 +18,19 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="90dp"
         />
-    <TextView
-        android:id="@+id/sign_in"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/signcontinue"
-        android:textColor="#9b9b9b"
-        android:textSize="16sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/welcome_back" />
+
     <TextView
         android:id="@+id/reset_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="60dp"
         android:text="Email"
         android:textColor="#313131"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_in" />
+        app:layout_constraintTop_toBottomOf="@+id/welcome_back" />
+
     <EditText
         android:id="@+id/txtEmail"
         android:layout_width="match_parent"
@@ -76,32 +67,20 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_password" />
-    <TextView
-        android:id="@+id/forgot_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="24dp"
-        android:text="@string/forgot_password"
-        android:textColor="#313131"
-        android:textSize="18sp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtPassword"
-        />
+
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:textSize="18sp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginBottom="212dp"
         android:text="LOG IN"
-        app:layout_constraintTop_toBottomOf="@id/forgot_password"
-        android:layout_marginTop="80dp"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnTambah"
