--- a/app/src/main/res/layout/activity_tambah_matkul.xml
+++ b/app/src/main/res/layout/activity_tambah_matkul.xml
@@ -45,4 +45,13 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNama" />
+
+    <Button
+        android:id="@+id/btnTambahMatkul"
+        android:layout_width="92dp"
+        android:layout_height="36dp"
+        android:text="Tambah"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
