Membuat tampilan Soal, Tambah Soal, dan memperbaiki struktur firebase

--- a/app/src/main/res/layout/activity_login_dosen.xml
+++ b/app/src/main/res/layout/activity_login_dosen.xml
@@ -83,7 +83,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/btnTambah"
+        android:id="@+id/btnTambahSoal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tambah"
