--- a/app/src/main/res/layout/activity_tambah_soal.xml
+++ b/app/src/main/res/layout/activity_tambah_soal.xml
@@ -73,7 +73,7 @@
             android:text="Pilih Jawaban Benar" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/spinnerKunci"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
