--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,28 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlue">#29BBBB</color>
+    <color name="blue">#523B4DA8</color>
+
+
+    <color name="dot_dark_screen1">#03105A</color>
+    <color name="dot_dark_screen2">#03105A</color>
+    <color name="dot_dark_screen3">#03105A</color>
+
+    <color name="dot_light_screen1">#2C03105A</color>
+    <color name="dot_light_screen2">#2C03105A</color>
+    <color name="dot_light_screen3">#2C03105A</color>
+    <color name="bgdialog">#3DE1D1</color>
+    <color name="green">#510FC715</color>
+
+    <array name="array_dot_active">
+        <item>@color/dot_light_screen1</item>
+        <item>@color/dot_light_screen2</item>
+        <item>@color/dot_light_screen3</item>
+    </array>
+
+    <array name="array_dot_inactive">
+        <item>@color/dot_dark_screen1</item>
+        <item>@color/dot_dark_screen2</item>
+        <item>@color/dot_dark_screen3</item>
+    </array>
 </resources>
