--- a/app/src/main/res/layout/listsoal.xml
+++ b/app/src/main/res/layout/listsoal.xml
@@ -74,5 +74,22 @@
             android:layout_height="wrap_content"
             android:text="TextView" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btnHapus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hapus" />
+
+        <Button
+            android:id="@+id/btnEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="EDIT" />
+    </LinearLayout>
+
 
 </LinearLayout>
