--- a/app/src/main/res/layout/activity_list_nilai.xml
+++ b/app/src/main/res/layout/activity_list_nilai.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".Menu.ListNilaiActivity">
 
     <EditText
@@ -25,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="28dp"
         android:text="Button"
+        android:background="@drawable/roundedbutton"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txtCariNIM"
