--- a/app/src/main/res/layout/activity_login_dosen.xml
+++ b/app/src/main/res/layout/activity_login_dosen.xml
@@ -76,6 +76,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="212dp"
         android:text="LOG IN"
+        android:background="@drawable/roundedbutton"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tambah"
+        android:background="@drawable/roundedbutton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
