--- a/app/src/main/res/layout/activity_matkul.xml
+++ b/app/src/main/res/layout/activity_matkul.xml
@@ -46,5 +46,6 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/roundedbutton"
         app:layout_constraintVertical_bias="0.274" />
 </androidx.constraintlayout.widget.ConstraintLayout>
