--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -8,31 +8,42 @@
     android:background="@drawable/background"
     tools:context=".Menu.SigninActivity">
 
-    <EditText
-        android:id="@+id/txtSNama"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Nama"
-        android:inputType="textPersonName" />
 
-    <EditText
-        android:id="@+id/txtSEmail"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email"
-        android:inputType="textEmailAddress"/>
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
+        android:orientation="vertical">
+        <EditText
+            android:id="@+id/txtSNama"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Nama"
+            android:layout_marginTop="40dp"
+            android:inputType="textPersonName" />
 
-    <EditText
-        android:id="@+id/txtSPass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="Password" />
+        <EditText
+            android:id="@+id/txtSEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            android:layout_marginTop="20dp"
+            android:inputType="textEmailAddress"/>
 
-    <Button
-        android:id="@+id/btnSTambah"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tambah" />
+        <EditText
+            android:id="@+id/txtSPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:layout_marginTop="20dp"
+            android:hint="Password" />
+
+        <Button
+            android:id="@+id/btnSTambah"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Tambah" />
+    </LinearLayout>
 </LinearLayout>
