--- a/app/src/main/res/layout/activity_tambah_soal.xml
+++ b/app/src/main/res/layout/activity_tambah_soal.xml
@@ -6,84 +6,100 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/background"
     tools:context=".Menu.TambahSoalActivity" >
-
-    <EditText
-        android:id="@+id/txtTSoal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Masukkan Soal"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/txtTA"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Masukkan Jawaban A"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp" />
-
-    <EditText
-        android:id="@+id/txtTB"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Masukkan Jawaban B"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp" />
-
-    <EditText
-        android:id="@+id/txtTC"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Masukkan Jawaban C"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp" />
-
-    <EditText
-        android:id="@+id/txtTD"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Masukkan Jawaban D"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp" />
-
-    <EditText
-        android:id="@+id/txtTE"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Masukkan Jawaban E"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pilih Jawaban Benar" />
-
-        <Spinner
-            android:id="@+id/spinnerKunci"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_margin="20dp">
+        <EditText
+            android:id="@+id/txtTSoal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:entries="@array/Soal" />
-    </LinearLayout>
+            android:ems="10"
+            android:hint="Masukkan Soal"
+            android:layout_marginTop="40dp"
+            android:inputType="textPersonName" />
 
-    <Button
-        android:id="@+id/btnTambah"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tambah Soal" />
+        <EditText
+            android:id="@+id/txtTA"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Masukkan Jawaban A"
+            android:inputType="textPersonName"
+            android:layout_marginTop="20dp"
+            android:paddingLeft="20dp" />
+
+        <EditText
+            android:id="@+id/txtTB"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Masukkan Jawaban B"
+            android:inputType="textPersonName"
+            android:layout_marginTop="20dp"
+            android:paddingLeft="20dp" />
+
+        <EditText
+            android:id="@+id/txtTC"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Masukkan Jawaban C"
+            android:inputType="textPersonName"
+            android:layout_marginTop="20dp"
+            android:paddingLeft="20dp" />
+
+        <EditText
+            android:id="@+id/txtTD"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Masukkan Jawaban D"
+            android:inputType="textPersonName"
+            android:layout_marginTop="20dp"
+            android:paddingLeft="20dp" />
+
+        <EditText
+            android:id="@+id/txtTE"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Masukkan Jawaban E"
+            android:inputType="textPersonName"
+            android:layout_marginTop="20dp"
+            android:paddingLeft="20dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pilih Jawaban Benar" />
+
+            <Spinner
+                android:id="@+id/spinnerKunci"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:entries="@array/Soal" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnTambah"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tambah Soal"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/roundedbutton"/>
+    </LinearLayout>
 
 </LinearLayout>
