--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlue">#29BBBB</color>
     <color name="blue">#523B4DA8</color>
+    <color name="rounded1">#8B006D5F</color>
+    <color name="white">#FFFFFF</color>
 
 
     <color name="dot_dark_screen1">#03105A</color>
