--- a/app/src/main/res/layout/activity_login_dosen.xml
+++ b/app/src/main/res/layout/activity_login_dosen.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Menu.LoginDosenActivity"
     android:background="@drawable/background">
+
     <TextView
         android:id="@+id/welcome_back"
         android:layout_width="wrap_content"
@@ -14,47 +15,45 @@
         android:text="Welcome "
         android:textColor="#313131"
         android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@+id/reset_code"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="90dp"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/reset_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="60dp"
         android:text="Email"
         android:textColor="#313131"
         android:textSize="20sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_back" />
+        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
         android:id="@+id/txtEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
         android:layout_marginRight="24dp"
-        android:inputType="textEmailAddress"
+        android:layout_marginBottom="15dp"
         android:hint="Enter Your Email"
+        android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/new_password"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/reset_code"
-        />
+        app:layout_constraintRight_toRightOf="parent" />
+
     <TextView
         android:id="@+id/new_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="8dp"
         android:text="Password"
         android:textColor="#313131"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
+        app:layout_constraintTop_toTopOf="parent" />
     <EditText
         android:id="@+id/txtPassword"
         android:layout_width="match_parent"
@@ -74,21 +73,24 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="212dp"
-        android:text="LOG IN"
         android:background="@drawable/roundedbutton"
+        android:text="LOG IN"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:backgroundTint="@color/rdgreen"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
 
     <Button
         android:id="@+id/btnTambahSoal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tambah"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
         android:background="@drawable/roundedbutton"
+        android:text="Sign In"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
