--- a/app/src/main/res/layout/activity_mhs_login.xml
+++ b/app/src/main/res/layout/activity_mhs_login.xml
@@ -7,80 +7,98 @@
     android:background="@drawable/background"
     android:orientation="vertical"
     tools:context=".Menu.MhsLoginActivity">
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="20dp"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/welcome_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
             android:text="Welcome "
             android:textColor="#313131"
-            android:textSize="32sp" />
+            android:textSize="32sp"
+            app:layout_constraintBottom_toTopOf="@+id/reset_code"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.68" />
 
         <TextView
             android:id="@+id/reset_code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
             android:text="NIM"
             android:textColor="#313131"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/txtNIM"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/txtNIM"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
             android:hint="Enter Your NIM"
-            android:layout_marginTop="20dp"
-            android:inputType="textEmailAddress" />
+            android:inputType="phone"
+            app:layout_constraintBottom_toTopOf="@+id/new_password"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/new_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:text="Nama"
             android:textColor="#313131"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.39" />
 
         <EditText
             android:id="@+id/txtNama"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:hint="@string/enter_nama" />
+            android:hint="@string/enter_nama"
+            app:layout_constraintStart_toStartOf="parent"
+            android:inputType="textPersonName"
+            app:layout_constraintTop_toBottomOf="@id/new_password" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:text="Kelas"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtNama" />
 
         <EditText
             android:id="@+id/txtKelas"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:hint="@string/enter_kelas"
             android:inputType="textPersonName"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView7" />
 
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:background="@drawable/roundedbutton"
-            android:text="LOG IN"
-            android:textSize="18sp" />
-    </LinearLayout>
+            android:backgroundTint="@color/rdgreen"
+            android:text="Masuk"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtKelas"
+            app:layout_constraintVertical_bias="0.38" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
