--- a/app/src/main/res/layout/jawabsoal.xml
+++ b/app/src/main/res/layout/jawabsoal.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/background"
+    android:background="@drawable/cardsoal"
+    android:layout_margin="10dp"
+    android:padding="10dp"
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/linearjawab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/txtNoSoal"
@@ -35,7 +39,9 @@
         android:id="@+id/rButton"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="15dp">
+        android:paddingLeft="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearjawab">
 
         <RadioButton
             android:id="@+id/rButtonA"
@@ -74,6 +80,11 @@
         android:layout_width="114dp"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:text="Simpan" />
+        android:background="@drawable/roundedbutton"
+        android:text="Simpan"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rButton" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
