--- a/app/src/main/res/layout/listmatkul.xml
+++ b/app/src/main/res/layout/listmatkul.xml
@@ -5,7 +5,9 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/background"
+    android:background="@drawable/card9"
+    android:layout_margin="10dp"
+    android:padding="10dp"
     android:orientation="vertical"
 
     >
@@ -14,7 +16,6 @@
         android:id="@+id/txtNama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="Nama Mata Kuliah"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -43,19 +44,26 @@
 
     <Button
         android:id="@+id/btnhapusmatkul"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="25dp"
+        android:background="@drawable/roundedbutton"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/red"
         android:text="Hapus"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btneditmatkul"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btneditmatkul" />
 
     <Button
         android:id="@+id/btneditmatkul"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="25dp"
+        android:background="@drawable/roundedbutton"
+        android:backgroundTint="@color/rdgreen"
         android:text="Edit"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
