Memperbaiki backend yang salah dan Memperbaiki tampilan

--- a/app/src/main/res/layout/activity_mhs_login.xml
+++ b/app/src/main/res/layout/activity_mhs_login.xml
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             android:hint="Enter Your NIM"
+            android:maxLength="10"
             android:inputType="phone"
             app:layout_constraintBottom_toTopOf="@+id/new_password"
             app:layout_constraintStart_toStartOf="parent" />
