--- a/app/src/main/res/layout/activity_tambah_soal.xml
+++ b/app/src/main/res/layout/activity_tambah_soal.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/roundedbutton"
-            android:text="Tambah Soal"
+            android:text="Tambah"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lineartamabah"
             app:layout_constraintVertical_bias="0.17000002" />
@@ -114,6 +114,19 @@
                 android:entries="@array/Soal" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/headertambah"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tambah Soal"
+            android:textAlignment="center"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/txtTSoal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
