--- a/app/src/main/res/layout/activity_list_nilai.xml
+++ b/app/src/main/res/layout/activity_list_nilai.xml
@@ -25,6 +25,7 @@
             android:layout_height="wrap_content"
             android:digits="0123456789"
             android:ems="10"
+            android:maxLength="10"
             android:hint="Masukkan NIM"
             android:inputType="phone"
             android:textStyle="bold" />
