--- a/app/src/main/res/layout/dialog_edit_matkul.xml
+++ b/app/src/main/res/layout/dialog_edit_matkul.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -11,7 +11,8 @@
         android:layout_marginBottom="12dp"
         android:text="Edit Matakuliah"
         android:textAlignment="center"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/editmatkul"
@@ -23,6 +24,8 @@
         android:id="@+id/btneditmatkul"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/roundedbutton"
+        android:backgroundTint="@color/rdgreen"
         android:text="Update" />
 
 </LinearLayout>
