--- a/app/src/main/res/layout/dialog_hasil_nilai.xml
+++ b/app/src/main/res/layout/dialog_hasil_nilai.xml
@@ -1,41 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/bgdialog"
+    android:layout_height="160dp"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:text="Hasil Nilai"
         android:background="@color/blue"
-        android:textStyle="bold"
+        android:text="Hasil Nilai"
         android:textAlignment="center"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txtNilaiHasil"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textStyle="bold"
         android:paddingLeft="30dp"
-        android:textSize="24sp" />
+        android:text="TextView"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txtTanggalHasil"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:paddingRight="15dp"
+        android:text="TextView"
         android:textAlignment="textEnd" />
 
     <Button
         android:id="@+id/btnOke"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/green"
+        android:background="@drawable/roundedbutton"
         android:text="Oke" />
 </LinearLayout>
