--- a/app/src/main/res/layout/footer.xml
+++ b/app/src/main/res/layout/footer.xml
@@ -9,5 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Simpan" />
+        android:background="@drawable/roundedbutton"
+        android:text="Cek Nilai " />
 </LinearLayout>
